Apply feTurbulence spec change to fix zero length vector generation https://bugs.webkit.org/show_bug.cgi?id=140812 .:

Patch by Nikos Andronikos <nikos.andronikos-webkit@cisra.canon.com.au> on 2015-01-26
Reviewed by Darin Adler.

Recently a bug with the turbulence algorithm was corrected in the
Filter Effects specification.
For some seed values this bug allowed zero length vectors to be generated.
This resulted in large solid color squares being present in the generated image.
The feTurbulence algorithm was updated to reject zero length vectors. This patch
applies that change in WebCore.

Test: svg/filters/feTurbulence_bad_seeds.html

* platform/graphics/filters/FETurbulence.cpp:
(WebCore::FETurbulence::initPaint):
Added rejection sampling during vector generation to avoid zero length vectors.

LayoutTests:

Patch by Nikos Andronikos <nikos.andronikos-webkit@cisra.canon.com.au> on 2015-01-26
Reviewed by Darin Adler.

Ref test that generates a turbulence image which is then coloured black
and alpha min/maxxed (>0 becomes 1, 0 stays zero). This allows holes
caused by zero length vectors to be easily identified.

* svg/filters/feTurbulence_bad_seeds-expected.html: Added.
* svg/filters/feTurbulence_bad_seeds.html: Added.

Canonical link: https://commits.webkit.org/158912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179171 268f45cc-cd09-0410-ab3c-d52691b4dbfc